# python-sdk

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build.yml  release.yml  tests.yml
scripts/: load_version.py
src/tcgdexsdk/: __init__.py  enums.py  internal.pyi  query.py  tcgdex.py  utils.py
src/tcgdexsdk/endpoints/: Endpoint.py
src/tcgdexsdk/models/: Card.py  CardResume.py  IntEndpoint.py  Model.py  Model.pyi  Serie.py  SerieResume.py  Set.py  SetResume.py  StringEndpoint.py  __init__.py  subs.py
tcgdexsdk/: __init__.py  enums.py  internal.py  utils.py
tcgdexsdk/models/: __init__.py  subs.py
tests/: tests.py
tests/.fixtures/: test_card.yaml  test_card_resume.yaml  test_category_item.yaml  test_category_list.yaml  test_dexId_item.yaml  test_dexId_list.yaml  test_energyType_item.yaml  test_energyType_list.yaml  test_fr.yaml  test_get_full_card.yaml  test_get_full_serie.yaml  test_get_full_set.yaml  test_hp_item.yaml  test_hp_list.yaml  test_illustrator_item.yaml  test_illustrator_list.yaml  test_query_equal.yaml  test_query_not_equal.yaml  test_rarity_item.yaml  test_rarity_list.yaml  test_regulationMark_item.yaml  test_regulationMark_list.yaml  test_retreat_item.yaml  test_retreat_list.yaml  test_serie.yaml  test_serie_resume.yaml  test_set.yaml  test_set_resume.yaml  test_stage_item.yaml  test_stage_list.yaml  test_suffix_item.yaml  test_suffix_list.yaml  test_trainerType_item.yaml  test_trainerType_list.yaml  test_type_item.yaml  test_type_list.yaml  test_variant_item.yaml  test_variant_list.yaml
