
[project]
name = "tcgdex-sdk"
version = "0.10.0"
description = ""
authors = [{ name = "Avior", email = "git@avior.me" }, { name = "HellLord77" }]
dependencies = ["dacite>=1.8.1"]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
maintainers = [{ name = "Avior", email = "git@avior.me" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
"Bug Tracker" = "https://github.com/tcgdex/python-sdk/issues"
"Sponsor Us !" = "https://github.com/sponsors/tcgdex"
homepage = "https://tcgdex.dev"
repository = "https://github.com/tcgdex/python-sdk"
documentation = "https://tcgdex.dev"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["ruff>=0.6.7", "vcrpy<7.0.0,>=6.0.1", "toml>=0.10.2"]

[tool.pdm.scripts]
pre_build = "python scripts/load_version.py"
check = "ruff check"
test = "python -m unittest discover -s tests"

[tool.pdm.build]
includes = ["src/tcgdexsdk"]

[tool.ruff]
line-length = 120
# exclude = ["build/", "docs/"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"
reportTypeshedErrors = false
reportMissingImports = true
reportMissingTypeStubs = false
